# DirectX_example

./: README.md
1_triangle/: CMakeLists.txt
1_triangle/src/: triangle.cpp
